src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__uuid__cast_uuid_to_string__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/uuid.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: String,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: String,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastStringToUuid(
            CastStringToUuid,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
